# synsense

./: pyproject.toml  readme.md
code/net/: dataset.py
code/preprocess/: preprocessors.py  utils.py
src/net/: dataset.py
src/preprocess/: events_heatmap_show.py  parallelProcessing.py  user.py
synsense.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
synsense/board/: deploy.py
synsense/net/: auto.py  auto_ddp.py  dataset.py  utils.py
synsense/power/: power.py
synsense/preprocess/: events_heatmap_show.py  parallelProcessing.py  pipeline.py  preprocessors.py  utils.py
test/: preprocess.ipynb  test1.ipynb  train_test.ipynb  user.py
tutorial/: infertime.ipynb  test_confusion.ipynb  train-singleGPU.ipynb  train_ddp.py  user.py  wave.ipynb
